--- a/deploy/crds/operator.ibm.com_helmrepos_crd.yaml
+++ b/deploy/crds/operator.ibm.com_helmrepos_crd.yaml
@@ -1,9 +1,9 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: helmrepos.charts.helm.k8s.io
+  name: helmrepos.operator.ibm.com
 spec:
-  group: charts.helm.k8s.io
+  group: operator.ibm.com
   names:
     kind: HelmRepo
     listKind: HelmRepoList
