--- a/deploy/crds/operator.ibm.com_v1alpha1_helmrepo_cr.yaml
+++ b/deploy/crds/operator.ibm.com_v1alpha1_helmrepo_cr.yaml
@@ -1,17 +1,19 @@
-apiVersion: charts.helm.k8s.io/v1alpha1
+apiVersion: operator.ibm.com/v1alpha1
 kind: HelmRepo
 metadata:
-  name: example-helmrepo
+  name: helm-repo
 spec:
   # Default values copied from <project_dir>/helm-charts/helm-repo/values.yaml
-  
+  # Default values for chart2.
+  # This is a YAML-formatted file.
+  # Declare variables to be passed into your templates
   arch: ""
   auditService:
     config:
       enabled: true
     image:
       pullPolicy: IfNotPresent
-      repository: ibmcom/icp-audit-service
+      repository: quay.io/opencloudio/icp-helm-repo
       tag: 3.3.1
     name: icp-audit-service
   helmrepo:
@@ -28,7 +30,7 @@ spec:
     image:
       name: helm-repo
       pullPolicy: IfNotPresent
-      repository: ibmcom/icp-helm-repo
+      repository: quay.io/opencloudio/icp-helm-repo
       tag: 3.3.0
     resources:
       limits:
@@ -61,4 +63,3 @@ spec:
     operator: Exists
   - key: CriticalAddonsOnly
     operator: Exists
-  
