--- a/deploy/olm-catalog/ibm-helm-repo-operator/ibm-helm-repo-operator.package.yaml
+++ b/deploy/olm-catalog/ibm-helm-repo-operator/ibm-helm-repo-operator.package.yaml
@@ -2,4 +2,4 @@ channels:
 - currentCSV: ibm-helm-repo-operator.v0.0.1
   name: alpha
 defaultChannel: alpha
-packageName: ibm-helm-repo-operator
+packageName: ibm-helm-repo-operator-app
