--- a/deploy/role_binding.yaml
+++ b/deploy/role_binding.yaml
@@ -1,11 +1,24 @@
-kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
 metadata:
   name: ibm-helm-repo-operator
 subjects:
 - kind: ServiceAccount
   name: ibm-helm-repo-operator
 roleRef:
+  apiGroup: rbac.authorization.k8s.io
   kind: Role
   name: ibm-helm-repo-operator
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: ibm-helm-repo-operator
+subjects:
+- kind: ServiceAccount
+  name: ibm-helm-repo-operator
+  namespace: ibm-common-services
+roleRef:
   apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: ibm-helm-repo-operator
