add metering and healthcheck annotations

--- a/deploy/crds/operator.ibm.com_v1alpha1_helmrepo_cr.yaml
+++ b/deploy/crds/operator.ibm.com_v1alpha1_helmrepo_cr.yaml
@@ -1,7 +1,7 @@
 apiVersion: operator.ibm.com/v1alpha1
 kind: HelmRepo
 metadata:
-  name: default-helm-repo
+  name: helm-repo
 spec:
   # Default values copied from <project_dir>/helm-charts/helm-repo/values.yaml
   # Default values for chart2.
