--- a/deploy/olm-catalog/ibm-helm-repo-operator/0.0.1/ibm-helm-repo-operator.v0.0.1.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/ibm-helm-repo-operator/0.0.1/ibm-helm-repo-operator.v0.0.1.clusterserviceversion.yaml
@@ -8,7 +8,7 @@ metadata:
           "apiVersion": "operator.ibm.com/v1alpha1",
           "kind": "HelmRepo",
           "metadata": {
-            "name": "default-helm-repo"
+            "name": "helm-repo"
           },
           "spec": {
             "arch": "",
@@ -143,6 +143,11 @@ spec:
           strategy: {}
           template:
             metadata:
+              annotations:
+                productID: 068a62892a1e4db39641342e592daa25
+                productMetric: FREE
+                productName: IBM Cloud Platform Common Services
+                productVersion: 3.3.0
               labels:
                 name: ibm-helm-repo-operator
             spec:
