--- a/.osdk-scorecard.yaml
+++ b/.osdk-scorecard.yaml
@@ -2,12 +2,12 @@ scorecard:
   # Setting a global scorecard option
   output: json
   plugins:
-    # `basic` tests configured to test 2 CRs
+    # basic tests configured to test CRs
     - basic:
         cr-manifest:
           - "deploy/crds/operator.ibm.com_v1alpha1_helmrepo_cr.yaml"
-    # `olm` tests configured to test 2 CRs
+    # olm tests configured to test CRs
     - olm:
         cr-manifest:
           - "deploy/crds/operator.ibm.com_v1alpha1_helmrepo_cr.yaml"
-        csv-path: "deploy/olm-catalog/ibm-helm-repo-operator/0.0.1/ibm-helm-repo-operator.v0.0.1.clusterserviceversion.yaml"
+        csv-path: "deploy/olm-catalog/ibm-helm-repo-operator/3.5.0/ibm-helm-repo-operator.v3.5.0.clusterserviceversion.yaml"
