--- a/deploy/olm-catalog/ibm-helm-repo-operator/3.5.0/ibm-helm-repo-operator.v3.5.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/ibm-helm-repo-operator/3.5.0/ibm-helm-repo-operator.v3.5.0.clusterserviceversion.yaml
@@ -105,6 +105,9 @@ spec:
       - kind: Pod
         name: Pod
         version: v1
+      - kind: ReplicaSet
+        name: ReplicaSet
+        version: v1
       - kind: RoleBinding
         name: RoleBinding
         version: rbac.authorization.k8s.io/v1
