--- a/deploy/crds/operator.ibm.com_helmrepos_crd.yaml
+++ b/deploy/crds/operator.ibm.com_helmrepos_crd.yaml
@@ -11,7 +11,8 @@ spec:
     singular: helmrepo
   scope: Namespaced
   subresources:
-    status: {}
+    status: 
+      description: 'placeholder description'
   validation:
     openAPIV3Schema:
       description: HelmRepo is the Schema for the helmrepos API
@@ -173,6 +174,7 @@ spec:
                 name:
                   type: string
               type: object
+            type: object
       required:
       - metadata
       - spec     
