--- a/deploy/crds/operator.ibm.com_helmrepos_crd.yaml
+++ b/deploy/crds/operator.ibm.com_helmrepos_crd.yaml
@@ -1,9 +1,13 @@
-apiVersion: apiextensions.k8s.io/v1
+apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: helmrepos.operator.ibm.com
 spec:
   group: operator.ibm.com
+  versions:
+  - name: v1beta1
+    served: true
+    storage: true
   names:
     kind: HelmRepo
     listKind: HelmRepoList
