--- a/deploy/crds/operator.ibm.com_helmrepos_crd.yaml
+++ b/deploy/crds/operator.ibm.com_helmrepos_crd.yaml
@@ -30,7 +30,7 @@ spec:
           description: 'Kind is a string value representing the REST resource this
             object represents. Servers may infer this from the endpoint the client
             submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-          type: string
+          type: map
         spec:
           properties:
             auditService:
