--- a/deploy/crds/operator.ibm.com_helmrepos_crd.yaml
+++ b/deploy/crds/operator.ibm.com_helmrepos_crd.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   group: operator.ibm.com
   versions:
-  - name: v1beta1
+  - name: v1
     served: true
     storage: true
   names:
