--- a/deploy/crds/operator.ibm.com_helmrepos_crd.yaml
+++ b/deploy/crds/operator.ibm.com_helmrepos_crd.yaml
@@ -19,7 +19,7 @@ spec:
       description: 'placeholder description'
   validation:
     openAPIV3Schema:
-      description: HelmRepo is the Schema for the helmrepos API
+      description: 'HelmRepo is the Schema for the helmrepos API'
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
