going in a different direction

--- a/deploy/crds/operator.ibm.com_helmrepos_crd.yaml
+++ b/deploy/crds/operator.ibm.com_helmrepos_crd.yaml
@@ -11,8 +11,7 @@ spec:
     singular: helmrepo
   scope: Namespaced
   subresources:
-    status: 
-      description: 'placeholder description'
+    status: {}
   validation:
     openAPIV3Schema:
       description: HelmRepo is the Schema for the helmrepos API
@@ -174,7 +173,7 @@ spec:
                 name:
                   type: string
               type: object
-            type: object
+          type: object
       required:
       - metadata
       - spec     
