remove comment, try to fix issue in travis.yml

--- a/deploy/crds/operator.ibm.com_helmrepos_crd.yaml
+++ b/deploy/crds/operator.ibm.com_helmrepos_crd.yaml
@@ -177,7 +177,7 @@ spec:
       required:
       - metadata
       - spec     
-      #type: object
+      type: object
   version: v1alpha1
   versions:
   - name: v1alpha1
