--- a/deploy/crds/operator.ibm.com_helmrepos_crd.yaml
+++ b/deploy/crds/operator.ibm.com_helmrepos_crd.yaml
@@ -177,7 +177,7 @@ spec:
       required:
       - metadata
       - spec     
-      type: object
+      #type: object #will need to uncomment this line out down the road
   version: v1alpha1
   versions:
   - name: v1alpha1
