--- a/deploy/crds/operator.ibm.com_helmrepos_crd.yaml
+++ b/deploy/crds/operator.ibm.com_helmrepos_crd.yaml
@@ -2,6 +2,13 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: helmrepos.operator.ibm.com
+  labels:
+    app.kubernetes.io/instance: 
+      type: string
+    app.kubernetes.io/managed-by: 
+      type: string
+    app.kubernetes.io/name: 
+      type: string
 spec:
   group: operator.ibm.com
   names:
