--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -24,6 +24,7 @@ spec:
             nodeSelectorTerms:
             - matchExpressions:
               - key: kubernetes.io/arch
+                operator: In
       containers:
         - name: ibm-helm-repo-operator
           # Replace this with the built image name
