--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -25,6 +25,10 @@ spec:
             - matchExpressions:
               - key: kubernetes.io/arch
                 operator: In
+                values:
+                  - amd64
+                  - ppc64le
+                  - s390x
       containers:
         - name: ibm-helm-repo-operator
           # Replace this with the built image name
