--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -24,11 +24,11 @@ spec:
             nodeSelectorTerms:
             - matchExpressions:
               - key: kubernetes.io/arch
-                # operator: In
-                # values:
-                #   - amd64
-                #   - ppc64le
-                #   - s390x
+                operator: In
+                values:
+                  - amd64
+                  - ppc64le
+                  - s390x
       containers:
         - name: ibm-helm-repo-operator
           # Replace this with the built image name
