--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -51,7 +51,7 @@ spec:
               memory: 512Mi
             requests:
               cpu: 100m
-              memory: 512Mi
+              memory: 128mi
           securityContext:
             allowPrivilegeEscalation: false
             capabilities:
