--- a/deploy/olm-catalog/ibm-helm-repo-operator/3.5.0/operator.ibm.com_helmrepos_crd.yaml
+++ b/deploy/olm-catalog/ibm-helm-repo-operator/3.5.0/operator.ibm.com_helmrepos_crd.yaml
@@ -1,14 +1,11 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: helmrepos.operator.ibm.com
-  # labels:
-  #   app.kubernetes.io/instance: 
-  #     type: string
-  #   app.kubernetes.io/managed-by: 
-  #     type: string
-  #   app.kubernetes.io/name: 
-  #     type: string
+  labels:
+    name: helmrepos.operator.ibm.com
+    app.kubernetes.io/instance: helmrepos.operator.ibm.com
+    app.kubernetes.io/managed-by: helmrepos.operator.ibm.com
+    app.kubernetes.io/name: helmrepos.operator.ibm.com
 spec:
   group: operator.ibm.com
   names:
