--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -2,7 +2,11 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   creationTimestamp: null
-  name: ibm-helm-repo-operator
+  labels:
+    name: ibm-helm-repo-operator
+    app.kubernetes.io/instance: helmrepos.operator.ibm.com
+    app.kubernetes.io/managed-by: helmrepos.operator.ibm.com
+    app.kubernetes.io/name: helmrepos.operator.ibm.com
 rules:
 - apiGroups:
   - ""
