--- a/helm-charts/helm-repo/templates/rbac.yaml
+++ b/helm-charts/helm-repo/templates/rbac.yaml
@@ -1,7 +1,12 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata: 
-  name: helm-repo-sa
+  labels:
+    name: helm-repo-sa
+    app.kubernetes.io/instance: helmrepos.operator.ibm.com
+    app.kubernetes.io/managed-by: helmrepos.operator.ibm.com
+    app.kubernetes.io/name: helmrepos.operator.ibm.com
+    helm.sh/chart: helm-repo
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
