--- a/deploy/service_account.yaml
+++ b/deploy/service_account.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  name: ibm-helm-repo-operator
   labels:
     name: ibm-helm-repo-operator
     app.kubernetes.io/instance: helmrepos.operator.ibm.com
