fixes to satisfy build errors

--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -9,6 +9,7 @@ spec:
       name: ibm-helm-repo-operator
   template:
     metadata:
+      name: ibm-helm-repo-operator
       labels:
         name: ibm-helm-repo-operator
         app.kubernetes.io/instance: helmrepos.operator.ibm.com
