--- a/deploy/crds/operator.ibm.com_v1alpha1_helmrepo_cr.yaml
+++ b/deploy/crds/operator.ibm.com_v1alpha1_helmrepo_cr.yaml
@@ -1,6 +1,7 @@
 apiVersion: operator.ibm.com/v1alpha1
 kind: HelmRepo
 metadata:
+  name: helmrepos.operator.ibm.com
   labels:
     name: helmrepos.operator.ibm.com
     app.kubernetes.io/instance: helmrepos.operator.ibm.com
