--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -2,6 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   creationTimestamp: null
+  name: ibm-helm-repo-operator
   labels:
     name: ibm-helm-repo-operator
     app.kubernetes.io/instance: helmrepos.operator.ibm.com
