--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -2,6 +2,11 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ibm-helm-repo-operator
+  labels:
+      name: ibm-helm-repo-operator
+      app.kubernetes.io/instance: helmrepos.operator.ibm.com
+      app.kubernetes.io/managed-by: helmrepos.operator.ibm.com
+      app.kubernetes.io/name: helmrepos.operator.ibm.com
 spec:
   replicas: 1
   selector:
