--- a/deploy/role_binding.yaml
+++ b/deploy/role_binding.yaml
@@ -19,6 +19,11 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: ibm-helm-repo-operator
+  labels:
+    name: ibm-helm-repo-operator
+    app.kubernetes.io/instance: helmrepos.operator.ibm.com
+    app.kubernetes.io/managed-by: helmrepos.operator.ibm.com
+    app.kubernetes.io/name: helmrepos.operator.ibm.com
 subjects:
 - kind: ServiceAccount
   name: ibm-helm-repo-operator
