checking cause of error

--- a/helm-charts/helm-repo/values-metadata.yaml
+++ b/helm-charts/helm-repo/values-metadata.yaml
@@ -30,20 +30,20 @@ tolerations:
     description: "Pod tolerations for assigning to nodes with matching taints"
     required: true
 
-arch:
-  __metadata:
-    label: "Node architecture"
-    description: "Node architecture to deploy to. The helm chart will try to detect the architecture based on the master node."
-    type: "string"
-    immutable: false
-    required: false
-    options:
-      - label: "amd64"
-        value: "amd64"
-      - label: "ppc64le"
-        value: "ppc64le"
-      - label: "s390x"
-        value: "s390x"
+# arch:
+#   __metadata:
+#     label: "Node architecture"
+#     description: "Node architecture to deploy to. The helm chart will try to detect the architecture based on the master node."
+#     type: "string"
+#     immutable: false
+#     required: false
+#     options:
+#       - label: "amd64"
+#         value: "amd64"
+#       - label: "ppc64le"
+#         value: "ppc64le"
+#       - label: "s390x"
+#         value: "s390x"
 
 runAsUser:
   __metadata:
