--- a/helm-charts/helm-repo/values.yaml
+++ b/helm-charts/helm-repo/values.yaml
@@ -7,6 +7,13 @@ auditService:
     repository: quay.io/opencloudio/icp-audit-service
     tag: 3.4.0
   name: icp-audit-service
+  resources:
+    limits:
+      cpu: 100m
+      memory: 512Mi
+    requests:
+      cpu: 100m
+      memory: 512Mi
 helmrepo:
   WLP_Creds:
     oidcClientId: WLP_CLIENT_ID
