separate registry from image name for cicd blocker

--- a/deploy/crds/operator.ibm.com_helmrepos_crd.yaml
+++ b/deploy/crds/operator.ibm.com_helmrepos_crd.yaml
@@ -40,6 +40,8 @@ spec:
                 image:
                   type: object
                   properties:
+                    imageRegistry:
+                      type: string
                     pullPolicy:
                       type: string
                     repository:
@@ -76,6 +78,8 @@ spec:
                 image:
                   type: object
                   properties:
+                    imageRegistry:
+                      type: string
                     name:
                       type: string
                     pullPolicy:
