--- a/deploy/crds/operator.ibm.com_v1alpha1_helmrepo_cr.yaml
+++ b/deploy/crds/operator.ibm.com_v1alpha1_helmrepo_cr.yaml
@@ -11,8 +11,9 @@ spec:
     config:
       enabled: true
     image:
+      imageRegistry: quay.io/opencloudio
       pullPolicy: IfNotPresent
-      repository: quay.io/opencloudio/icp-audit-service
+      repository: icp-audit-service
       tag: 3.4.0
     name: icp-audit-service
     resources:
@@ -34,9 +35,10 @@ spec:
       CLUSTER_PORT: 443
       PROXY_ROUTE: helm-repo
     image:
+      imageRegistry: quay.io/opencloudio
       name: helm-repo
       pullPolicy: IfNotPresent
-      repository: quay.io/opencloudio/icp-helm-repo
+      repository: icp-helm-repo
       tag: 3.3.0
     resources:
       limits:
