--- a/deploy/olm-catalog/ibm-helm-repo-operator/3.6.0/ibm-helm-repo-operator.v3.6.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/ibm-helm-repo-operator/3.6.0/ibm-helm-repo-operator.v3.6.0.clusterserviceversion.yaml
@@ -16,8 +16,9 @@ metadata:
                 "enabled": true
               },
               "image": {
+                "imageRegistry": "quay.io/opencloudio",
                 "pullPolicy": "IfNotPresent",
-                "repository": "quay.io/opencloudio/icp-audit-service",
+                "repository": "icp-audit-service",
                 "tag": "3.4.0"
               },
               "name": "icp-audit-service",
@@ -46,9 +47,10 @@ metadata:
                 "PROXY_ROUTE": "helm-repo"
               },
               "image": {
+                "imageRegistry": "quay.io/opencloudio",
                 "name": "helm-repo",
                 "pullPolicy": "IfNotPresent",
-                "repository": "quay.io/opencloudio/icp-helm-repo",
+                "repository": "icp-helm-repo",
                 "tag": "3.3.0"
               },
               "resources": {
