--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -21,7 +21,7 @@ spec:
       containers:
         - name: ibm-helm-repo-operator
           # Replace this with the built image name
-          image: quay.io/opencloudio/ibm-helm-repo-operator:3.6.0
+          image: quay.io/opencloudio/ibm-helm-repo-operator:latest
           imagePullPolicy: Always
           env:
             - name: WATCH_NAMESPACE
